tdf#90315 RTF import: fix \colsx default value

See SectPageInformation::mnColsx on the libreoffice-3-6 branch + the
spec agrees, too.

Change-Id: I6f70a125f8d962621f319e3e75e2865e5f126859
(cherry picked from commit e18adb7369d140f33b947668a69da2fa78738e7b)