writerfilter/source/dmapper/SectionColumnHandler.cxx
@@ -33,7 +33,7 @@ using namespace ::com::sun::star;
 SectionColumnHandler::SectionColumnHandler()
     : LoggedProperties(dmapper_logger, "SectionColumnHandler")
     , bEqualWidth(false)
-    , nSpace(0)
+    , nSpace(1270) // 720 twips
     , nNum(0)
     , bSep(false)
 {
